@@ -88,11 +88,11 @@ plugin_add (roach_context_t *ctx, const char *options)
   data->fail_at = atoi (options);
 
   if (roach_reg_syscall (ctx, __NR_brk, fail_mem, data) < 0)
-    exit (EXIT_FAILURE);
+    return -1;
 
 #ifdef __NR_mmap2
   if (roach_reg_syscall (ctx, __NR_mmap2, fail_mem, data) < 0)
-    exit (EXIT_FAILURE);
+    return -1;
 #endif
 
   return 0;
